--- a/config.json
+++ b/config.json
@@ -1,5 +1,12 @@
 {
   "MIN_TOP_PLAYERS": 1,
   "MAX_TOP_PLAYERS": 50,
-  "CONFIDENTIAL_USERNAMES": ["iloveczechrepublic", "kovarmachane"]
+  "CONFIDENTIAL_USERNAMES": ["iloveczechrepublic", "kovarmachane"],
+  "REQUEST_ENDPOINT": "/request",
+  "TOP_TIMES_ENDPOINT": "/toptimes",
+  "LINK_ENDPOINT": "/link",
+  "ALL_LINKS_ENDPOINT": "/all_linking_requests",
+
+  "LINK_CHECK_TIMEOUT": 300,
+  "LINK_CHECK_ATTEMPT_DELAY": 5
 }
