--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "MIN_TOP_PLAYERS": 1,
-  "MAX_TOP_PLAYERS": 50,
+  "MAX_TOP_PLAYERS": 100,
 
   "CONFIDENTIAL_USERNAMES": ["iloveczechrepublic", "kovarmachane"],
 
   "REQUEST_ENDPOINT": "/request",
-  "TOP_TIMES_ENDPOINT": "/toptimes",
+  "TOP_TIMES_ENDPOINT": "/top_times",
   "LINK_ENDPOINT": "/link",
   "ALL_LINKS_ENDPOINT": "/all_linking_requests",
 
   "LINK_CHECK_TIMEOUT": 300,
-  "LINK_CHECK_ATTEMPT_DELAY": 5,
+  "LINK_CHECK_ATTEMPT_DELAY": 10,
   "BAN_DURATION": 604800,
   "UNBAN_CHECK_DELAY": 43200
 }
