--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 requests = "2.31.0"
 Flask = "2.3.3"
 "discord.py" = "2.3.2"
+discord = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 
