periodic top players list

--- a/config.json
+++ b/config.json
@@ -9,8 +9,11 @@
   "LINK_ENDPOINT": "/link",
   "ALL_LINKS_ENDPOINT": "/all_linking_requests",
 
+  "TOP_PLAYERS_CHANNEL": 1152569084458835978,
+
   "LINK_CHECK_TIMEOUT": 300,
   "LINK_CHECK_ATTEMPT_DELAY": 10,
   "BAN_DURATION": 604800,
-  "UNBAN_CHECK_DELAY": 43200
+  "UNBAN_CHECK_DELAY": 43200,
+  "TOP_PLAYERS_UPDATE_DELAY": 3600
 }
