--- a/config.json
+++ b/config.json
@@ -15,5 +15,11 @@
   "LINK_CHECK_ATTEMPT_DELAY": 10,
   "BAN_DURATION": 604800,
   "UNBAN_CHECK_DELAY": 43200,
-  "TOP_PLAYERS_UPDATE_DELAY": 60
+  "TOP_PLAYERS_UPDATE_DELAY": 60,
+
+  "TOP_10_ROLE_ID": 1034509913491263529,
+  "TOP_25_ROLE_ID": 1034514265480101891,
+  "TOP_50_ROLE_ID": 1034514970915909632,
+  "TOP_75_ROLE_ID": 1157215481254649916,
+  "TOP_100_ROLE_ID": 1157215653044965447
 }
